Fix nav overflow issue in FF

--- a/app/assets/stylesheets/core/layouts/modern/_primary_nav.sass
+++ b/app/assets/stylesheets/core/layouts/modern/_primary_nav.sass
@@ -59,7 +59,7 @@
 
 .nav__item--primary
   +font-size(13)
-  padding: 21px 4px 20px
+  padding: 21px 4px 18px
   text-transform: uppercase
   &.btn--small
     &, .responsive &
@@ -85,7 +85,7 @@
       background-size: 40%
     +respond-to(wide-view)
       +font-size(13)
-      padding: 21px 4px 20px
+      padding: 21px 4px 18px
       border: none
       text-transform: uppercase
       &:before
